<?xml version="1.0" encoding="utf-8"?>

<!--    This file is part of csTimer Graph.                                     -->

<!--    Copyright © 2021-2023 Guglielmo Boi                                     -->

<!--    csTimer Graph is free software: you can redistribute it and/or modify   -->
<!--    it under the terms of the GNU General Public License as published by    -->
<!--    the Free Software Foundation, either version 3 of the License, or       -->
<!--    (at your option) any later version.                                     -->

<!--    csTimer Graph is distributed in the hope that it will be useful,        -->
<!--    but WITHOUT ANY WARRANTY; without even the implied warranty of          -->
<!--    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the           -->
<!--    GNU General Public License for more details.                            -->

<!--    You should have received a copy of the GNU General Public License       -->
<!--    along with csTimer Graph.  If not, see https://www.gnu.org/licenses/.   -->

<resources>

    <!-- Shared Preferences -->

    <!-- Shared Preferences keys -->
    <string name="settings_preferences_file_key">CSTIMER_GRAPH_SETTINGS_PREFERENCES_KEY</string>
    <string name="dark_theme_preference_key">CSTIMER_GRAPH_DARK_THEME_PREFERENCE_KEY</string>
    <string name="home_screen_preference_key">CSTIMER_GRAPH_LAUNCH_SCREEN_PREFERENCE_KEY</string>


    <!-- Nav Drawer -->

    <string name="app_name">csTimer Graph</string>
    <string name="home_fragment_title">Home</string>
    <string name="import_session_title">Import session</string>
    <string name="view_sessions_title">View sessions</string>
    <string name="about_title">About</string>
    <string name="donate_title">Donate</string>
    <string name="settings_title">Settings</string>

    <string name="drawer_open_description">Open drawer.</string>
    <string name="drawer_close_description">Close drawer.</string>


    <!-- Import Session Fragment -->

    <!-- Headers texts -->
    <string name="tutorial_subheader_0_text">First, export the session file from cstimer.net:</string>
    <string name="tutorial_subheader_1_text">Then, import it using the button below:</string>
    <string name="tutorial_pc_header_text">Desktop device</string>
    <string name="tutorial_mobile_header_text">Mobile device</string>

    <!-- Descriptions -->
    <string name="tutorial_desktop_0_description">How to export a csTimer session from a desktop device, picture 0.</string>
    <string name="tutorial_desktop_1_description">How to export a csTimer session from a desktop device, picture 1.</string>
    <string name="tutorial_desktop_2_description">How to export a csTimer session from a desktop device, picture 2.</string>
    <string name="tutorial_mobile_0_description">How to export a csTimer session from a mobile device, picture 0.</string>
    <string name="tutorial_mobile_1_description">How to export a csTimer session from a mobile device, picture 1.</string>
    <string name="tutorial_mobile_2_description">How to export a csTimer session from a mobile device, picture 2.</string>
    <string name="cstimer_graph_logo_description">csTimer Graph icon.</string>
    <string name="desktop_computer_icon_description">Desktop computer icon.</string>
    <string name="smartphone_icon_description">Smartphone icon.</string>
    <string name="import_button_description">import_button_description.</string>


    <!-- View Sessions Fragment -->

    <!-- List Item Session Texts-->
    <string name="hyphen">-</string>
    <string name="mean">Mean:</string>
    <string name="bestSolve">Best Solve:</string>
    <string name="worstSolve">Worst Solve:</string>
    <string name="bestAverageFive">Best Avg5:</string>
    <string name="worstAverageFive">Worst Avg5:</string>
    <string name="bestAverageTwelve">Best Avg12:</string>
    <string name="worstAverageTwelve">Worst Avg12:</string>

    <!-- Delete Sessions -->
    <string name="delete_sessions_title">Delete sessions</string>

    <!-- Descriptions -->
    <string name="delete_sessions_button_description">"Delete sessions button."</string>
    <string name="load_session_button_description">"Load session button."</string>


    <!-- About Fragment -->

    <!-- Buttons texts -->
    <string name="rate_app_button_text">Rate this app on the Play Store</string>
    <string name="contact_us_button_text">Contact us by email</string>
    <string name="feedback_button_text">Feedback</string>
    <string name="contributors_button_text">Contributors</string>
    <string name="source_code_button_text">Source code</string>
    <string name="license_button_text">License</string>

    <!-- Buttons resources -->
    <string name="rate_app_uri">https://play.google.com/store/apps/details?id=com.guglielmoboi.cstimergraph</string>

    <string name="contact_us_email_address">cstimer.graph@gmail.com</string>
    <string name="contact_us_subject">csTimer Graph</string>

    <string name="feedback_google_form_uri">https://forms.gle/CMDYztcafs7HqQfF6</string>

    <string name="source_code_github_uri">https://github.com/guglielmo-boi/csTimer-Graph/</string>


    <!-- Contributors Dialog -->

    <!-- Headers texts -->
    <string name="contributors_header">Contributors</string>

    <!-- Contributors texts -->
    <string name="developer_name">Guglielmo Boi</string>
    <string name="designer_name">Brayner Vasirani</string>

    <!-- Descriptions -->
    <string name="developer_icon_description">Software developer icon.</string>
    <string name="designer_icon_description">Designer icon.</string>

    <!-- Buttons resources -->
    <string name="developer_email_address">boi.guglielmo@gmail.com</string>

    <string name="developer_instagram_uri">https://www.instagram.com/guglielmo.boi</string>

    <string name="developer_github_uri">https://github.com/guglielmo-boi</string>

    <string name="developer_stackoverflow_uri">https://stackoverflow.com/users/15498714/guglielmo-boi</string>

    <string name="designer_email_address">brayner.v@outlook.it</string>

    <string name="designer_instagram_uri">https://www.instagram.com/brayner_vasirani</string>


    <!-- License Dialog -->

    <!-- Headers texts -->
    <string name="license_header">License</string>

    <!-- License texts -->
    <string name="cstimer_graph_license">

            "Copyright © 2021-2023 Guglielmo Boi

csTimer Graph is free software: you can redistribute it
and/or modify it under the terms of the GNU General
Public License as published by the Free Software
Foundation, either version 3 of the License, or (at your
option) any later version.

csTimer Graph is distributed in the hope that it will be
useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS
FOR A PARTICULAR PURPOSE.  See the GNU General
Public License for more details.

You should have received a copy of the GNU General
Public License along with csTimer Graph.
If not, see https://www.gnu.org/licenses/."

    </string>

    <!-- License resource -->
    <string name="license_gnu_gpl_uri">https://www.gnu.org/licenses/gpl-3.0.html</string>


    <!-- Delete Dialog -->

    <!-- Delete header -->
    <string name="delete_header">Delete selected sessions?</string>

    <!-- Delete texts -->
    <string name="delete_button_text">Delete</string>
    <string name="cancel_button_text">Cancel</string>

    <!-- Donate Fragment -->

    <!-- Headers texts -->

    <string name="donate_list_header">Supporters</string>
    <string name="app_version_header">1.2</string>

    <!-- Donate texts -->

    <string name="donate_text">"Your donation helps us improving this\napp for everyone!"</string>
    <string name="donate_list_text">"Supporters' names will be added to the\nlist below each app update."</string>

    <!-- Descriptions -->
    <string name="donate_button_description">Donate button.</string>


    <!-- Settings Fragment -->

    <!-- Headers texts -->
    <string name="dark_theme_header">Dark theme</string>
    <string name="launch_screen_header">Home screen</string>

    <!-- Launch Screen spinner -->
    <string-array name="launch_screen_items">
        <item>Import session</item>
        <item>View sessions</item>
        <item>About</item>
        <item>Donate</item>
        <item>Settings</item>
    </string-array>

    <!-- Descriptions -->
    <string name="dark_theme_icon_description">Dark theme icon.</string>

</resources>