<?xml version="1.0" encoding="utf-8"?>

<!--    This file is part of csTimer Graph.                                     -->

<!--    Copyright © 2021-2024 Guglielmo Boi                                     -->

<!--    csTimer Graph is free software: you can redistribute it and/or modify   -->
<!--    it under the terms of the GNU General Public License as published by    -->
<!--    the Free Software Foundation, either version 3 of the License, or       -->
<!--    (at your option) any later version.                                     -->

<!--    csTimer Graph is distributed in the hope that it will be useful,        -->
<!--    but WITHOUT ANY WARRANTY; without even the implied warranty of          -->
<!--    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the           -->
<!--    GNU General Public License for more details.                            -->

<!--    You should have received a copy of the GNU General Public License       -->
<!--    along with csTimer Graph.  If not, see https://www.gnu.org/licenses/.   -->

<layout

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.guglielmoboi.cstimergraph.fragments.donate.DonateViewModel">
        </variable>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/donateHeader"
            style="@style/header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/donate_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider14"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateHeader" />

        <TextView
            android:id="@+id/donateText"
            style="@style/medium_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_boarder"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_boarder"
            android:background="@drawable/background_secondary_color"
            android:padding="@dimen/padding_medium"
            android:text="@string/donate_text"
            android:textAlignment="center"
            android:textColor="@color/onSecondaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider14" />

        <TextView
            android:id="@+id/donateListText"
            style="@style/medium_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_boarder"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_boarder"
            android:background="@drawable/background_secondary_color"
            android:padding="@dimen/padding_medium"
            android:text="@string/donate_list_text"
            android:textAlignment="center"
            android:textColor="@color/onPrimaryColor"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateText" />

        <View
            android:id="@+id/divider15"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_medium"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/donateListHeader"
            style="@style/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/donate_list_header"
            android:textColor="@color/onBackgroundTransparentColor"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider15" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/background_primary_color"
            android:contentDescription="@string/donate_button_description"
            android:onClick="@{() -> viewModel.onDonateButtonClicked()}"
            android:padding="@dimen/padding_big"
            android:src="@drawable/ic_gift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateListText"
            tools:ignore="RedundantDescriptionCheck"
            app:tint="@color/onPrimaryColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>