<?xml version="1.0" encoding="utf-8"?>

<!--    This file is part of csTimer Graph.                                     -->

<!--    Copyright © 2021-2023 Guglielmo Boi                                     -->

<!--    csTimer Graph is free software: you can redistribute it and/or modify   -->
<!--    it under the terms of the GNU General Public License as published by    -->
<!--    the Free Software Foundation, either version 3 of the License, or       -->
<!--    (at your option) any later version.                                     -->

<!--    csTimer Graph is distributed in the hope that it will be useful,        -->
<!--    but WITHOUT ANY WARRANTY; without even the implied warranty of          -->
<!--    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the           -->
<!--    GNU General Public License for more details.                            -->

<!--    You should have received a copy of the GNU General Public License       -->
<!--    along with csTimer Graph.  If not, see https://www.gnu.org/licenses/.   -->


<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.guglielmoboi.cstimergraph.dialogs.deletesessions.DeleteSessionsViewModel">
        </variable>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_surface_color">

        <TextView
            android:id="@+id/deleteHeader"
            style="@style/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/delete_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_giant"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/delete_button_text"
            android:onClick="@{() -> viewModel.onDeleteButtonClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteHeader" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/cancel_button_text"
            android:onClick="@{() -> viewModel.onCancelButtonClicked()}"
            app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/deleteButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>